[package]
name = "apex"
version = "0.1.1"
authors = ["braxtons12 <braxtonsalyer@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["signals", "slots"]
categories = ["concurrency", "data-structures", "game-development", "gui"]
description = "A configurable, multi-threaded signals and slots implementation for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "^0.4.2"
crossbeam-utils = "^0.7.2"
